@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.136 2007-10-17 00:56:20 cmatsuoka Exp $
+$Id: ChangeLog,v 1.137 2007-10-17 02:16:15 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -20,6 +20,7 @@ Stable versions
 	- fixed 669 persistent vibrato and portamento effects
 	- fixed FAR persistent vibrato/portamento and pattern break effects
 	- fixed sample loading in FAR modules
+	- fixed multi-retrig effect processing (see cyberculosis.xm ch 7)
 	- revert CoreAudio driver pause patch (fix memory management problem)
 	- reset MED synth program at each new note event
 	- removed filesize-based module format detection
